darbs/style.scss
body {
	background: #f8f8f8;
	color: #1a1a1a;
	font: 400 16px/1.5 "Helvetica Neue", "Helvetica", "Arial", sans-serif;
	margin: 0 auto;
	padding: 48px 24px;
	max-width: 720px;

	@media (prefers-color-scheme: dark) {
		background: #1a1a1a;
		color: #f8f8f8;
	}
}

header {
	display: flex;
	position: relative;
	padding-left: 32px;
	align-items: center;
	flex-wrap: wrap;
	gap: 16px 32px;

	h1 {
		font-size: 2em;
		font-weight: 700;
		line-height: 1.2;
		margin: 0 auto 0 0;

		&:before {
			content: '🚀';
			display: block;
			position: absolute;
			left: -12px;
		}
	}

	a {
		font-weight: 700;
		text-wrap: nowrap;

		&:before {
			content: '📄';
			display: inline-block;
			margin-right: 8px;
			text-decoration: none;
		}
	}
}

section {
	display: flex;
	flex-direction: column;
	position: relative;
	margin-block: 64px;
	padding-left: 36px;
	min-height: 1px;

	&:before {
		content: '';
		position: absolute;
		top: -28px;
		left: 0;
		bottom: -28px;
		width: 12px;
		border-radius: 4px;
	}

	$gradient-0: rgba(#1a7bff, 0); // Start from transparent version of the 1st color
	$gradient-1: #1a7bff;
	$gradient-2: #05e5ff;
	$gradient-3: #c1ff48;
	$gradient-4: #fff000;
	$gradient-5: #ff640a;
	$gradient-6: #f40b32;
	$gradient-7: #ce0049;
	$gradient-8: #a32879;
	$gradient-9: #7851a9;

	&:nth-of-type(1):before { background-image: linear-gradient($gradient-9, $gradient-8) }
	&:nth-of-type(2):before { background-image: linear-gradient($gradient-8, $gradient-7) }
	&:nth-of-type(3):before { background-image: linear-gradient($gradient-7, $gradient-6) }
	&:nth-of-type(4):before { background-image: linear-gradient($gradient-6, $gradient-5) }
	&:nth-of-type(5):before { background-image: linear-gradient($gradient-5, $gradient-4) }
	&:nth-of-type(6):before { background-image: linear-gradient($gradient-4, $gradient-3) }
	&:nth-of-type(7):before { background-image: linear-gradient($gradient-3, $gradient-2) }
	&:nth-of-type(8):before { background-image: linear-gradient($gradient-2, $gradient-1) }
	&:nth-of-type(9):before { background-image: linear-gradient($gradient-1, $gradient-0) }

	&:first-of-type {
		&:before {
			border-top-left-radius: 0;
			border-top-right-radius: 0;
			top: -16px;
		}

		&:after {
			content: '';
			display: block;
			position: absolute;
			top: -28px;
			left: 0;
			width: 0;
			height: 0;
			border-style: solid;
			border-width: 0 6px 12px 6px;
			border-color: transparent transparent $gradient-9 transparent;
		}
	}

	@media not screen {
		&:before,
		&:first-of-type:after {
			// Hide the gradient borders in print because backgrounds aren't printed by default anyway
			display: none;
		}
	}

	& > h1 {
		position: sticky;
		bottom: 32px;
		margin: -4px 0 0 -60px;
		font-size: inherit;
		font-weight: 500;
		white-space: nowrap;

		// Rotate the text
		writing-mode: vertical-lr;
		transform: rotate(180deg);

		// For sticky bottom to work
		order: 9999;
		align-self: flex-start;
	}
}

article {
	position: relative;

	& + article {
		margin-top: 40px;
	}

	h1 {
		margin: 0;
		font-size: 1.5em;
		font-weight: 500;
		line-height: 1.2;

		small {
			display: block;
			font-size: 1em;
			font-style: normal;
			color: #555;

			@media (prefers-color-scheme: dark) {
				color: lighten(#555, 33%);
			}
		}
	}

	.info {
		list-style: none;
		display: flex;
		flex-wrap: wrap;
		gap: 0 12px;
		margin: 12px 0;
		padding: 0;
		font-size: 0.75em;
		font-weight: 700;
		color: #555;

		@media (prefers-color-scheme: dark) {
			color: lighten(#555, 33%);
		}

		li:before {
			margin-right: 4px;
		}

		.when,
		.where {
			font-weight: 500;
		}

		.what:before {
			content: '🏢';
		}

		.when:before {
			content: '📆';
		}

		.where:before {
			content: '📍';
		}
		}

	p {
		margin: 0;
	}

	p + p {
		margin-top: .5em;
	}

	em {
		font-style: italic;
	}

	ul {
		margin: 1em 0 0 1.25em;
		padding-left: 0;
		font-weight: 700;
		list-style: disc outside;

		strong + span {
			font-weight: 400;
		}
	}

	li {
		margin: .3em 0;
	}
}

a {
	color: #05c;
	text-decoration: none;

	@media (prefers-color-scheme: dark) {
		color: lighten(#05c, 20%);
	}

	&:focus,
	&:hover {
		text-decoration: underline;
	}

	&:visited {
		color: #795ebb;

		@media (prefers-color-scheme: dark) {
			color: lighten(#795ebb, 20%);
		}
	}
}

